develop: prepared for implementation;

--- a/PrivacySandboxKotlin/gradle.properties
+++ b/PrivacySandboxKotlin/gradle.properties
@@ -21,3 +21,4 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 # Enables building an APK using the new Privacy Sandbox build flow
 android.experimental.privacysandboxsdk.enable=true
+android.experimental.privacysandboxsdk.requireServices=false
