--- a/PrivacySandboxKotlin/client-app/build.gradle
+++ b/PrivacySandboxKotlin/client-app/build.gradle
@@ -52,6 +52,13 @@ android {
     namespace 'com.example.privacysandbox.client'
 }
 dependencies {
+    implementation("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
+    implementation("com.google.android.gms:play-services-ads-identifier:17.0.0")
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
